# traffic

./: .gitignore  LICENSE  README.md  factorization_refactor.md  pyproject.toml
docs/: DATA.md  _model_methods_plate_diagram.py  analysis_migratory_resident_phenotypes.md  analysis_recirculation_paths.md  model_methods.tex  persistence_prior_spec.md
scripts/: analysis_migratory_vs_resident_phenotype.py  analysis_recirculation_paths_setup.py  analysis_recirculation_paths_visualize.py  boundary_pi_zero.py  fit_nuts.py  fit_nuts_holdout.py  fit_nuts_split.py  mask_audit.py  migration_validation.py  migration_validation_bayes.py  migration_validation_holdouts.py  migration_validation_ppc.py  plot_clonality_validation.py  predictability_breakdown.py  prior_predictive_persistence.py  recovery_check.py  recovery_check_factored.py  recovery_diagnostics.py  recovery_panel.py  sampler_benchmark.py  sbc_check.py  sbc_figures.py  score_holdouts.py  switching_transition_graph.py  switching_validation.py  switching_validation_holdouts.py  temporal_fit.py  temporal_forecast.py  temporal_readouts.py  validate_clonality_drift.py  validation_figure.py
tests/: test_factored.py  test_generative_consistency.py  test_io_interface.py  test_model.py  test_readouts_contract.py  test_recovery.py  test_sbc.py
traffic/: __init__.py  config.py  data.py  dynamics.py  inference.py  io.py  mcmc.py  model.py  posterior.py  readouts.py  recovery.py  sbc.py  scoring.py  simulate.py  statespace.py
